# quantumos

./: .gitignore  CITATION.cff  LICENSE  README.md  conftest.py  main.py  pyproject.toml
docs/: quantum_os_.md
docs/references/: 2021-the-last-cpu.txt  2025-Holographic-Storage-for-the-Cloud.txt  2602.10695v1.txt  A_device_independent_router_mo.txt  QOS-OSDI-2025.txt  Qibolab_an open-source hybrid quantum operating system.txt  os-for-executing-applications-nature.txt  s41586-026-10759-2.txt
examples/: s0-baseline.toml  s1-admission.toml  t1-control.toml  t1-open-companion.toml  t1-open.toml
qsim/: __init__.py  cli.py
qsim/analysis/: __init__.py  artifacts.py  attribution.py  numerics.py  reference.py  surrogates.py  t1.py  t2.py  t3.py
qsim/core/: __init__.py  clock.py  engine.py  event_heap.py  invariants.py  rng.py  state.py  trace.py
qsim/entities/: __init__.py  calibration.py  decoder.py  lease.py  module.py  pauli_frame.py  qubit.py  reservation.py  round.py
qsim/experiments/: config.py  run.py  sweep.py
qsim/models/: decay.py  decoder_service.py  heralding.py  memory_access.py  protocols.py  round_success.py
qsim/observe/: decision_points.py  run_dir.py  steady_state.py  views.py  work_accounting.py
qsim/policies/: __init__.py  admission.py  path_choice.py  pregen.py  protocol.py  s0.py  s1.py
qsim/workload/: generator.py
runs/benchmarks/: numpy-open-scale-2026-07-09.json
runs/seed-battery/: seed_battery_analysis.json
scripts/: calibration_bridge_t1.py  hedged_placement_stage1.py  install-hooks.sh  ots-upgrade.sh  pool_retry_sweep.py
(+258 files in other folders)
